syntax = "proto3";

option go_package = "github.com/Matias-Correia/go-test_server/protologs";


package protologs;

// Log service defenition
service LogTestData{
	//Sends 
	rpc SendLogs (Log) returns (Empty){}
}

message Empty{}

// Log definition
//Tempo desde que peço o request até que começo a receber o bloco
message Log{
	string blockID = 1;
	int64 request_delay = 2;
	bool blockDelivered = 3;
}